<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kleszcz.damian.zad_1.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty"
        android:id="@+id/email_validation"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/pass_validation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty"
        android:id="@+id/pass_validation"
        android:layout_below="@+id/email_validation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/sign_button"
        android:layout_below="@+id/pass_validation"
        android:layout_centerHorizontal="true"
        android:onClick="singIn"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:editable="false"
        android:enabled="true"
        android:hint="@string/email"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/pass"
        android:layout_below="@+id/email_validation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:autoText="false"
        android:hint="@string/pass"
        android:password="true"
        android:gravity="center_horizontal" />

</RelativeLayout>
