<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <!-- Title Label -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="6dip"
            android:textColor="#43bd00"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/title_ListView"
            android:layout_gravity="left"
            android:layout_column="0" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/desc"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:textColor="#acacac"
            android:text="@string/desc_ListView"
            android:layout_gravity="left"
            android:layout_column="0" />

        <ImageView
            android:layout_width="58dp"
            android:layout_height="63dp"
            android:id="@+id/url"
            android:layout_gravity="right"
            android:src="@drawable/image_not_found"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:layout_column="1"
            android:contentDescription="@string/imageDescription" />
    </TableRow>

    <!-- img -->

    <!-- desc label -->


</TableLayout>